--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Web platform for competitive gaming",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/MuramatKuskov/Digital-Duels/issues"
   },
-  "homepage": "https://github.com/MuramatKuskov/Digital-Duels#readme"
+  "homepage": "https://github.com/MuramatKuskov/Digital-Duels#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "node-telegram-bot-api": "^0.66.0",
+    "uuid": "^11.0.5",
+    "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
